---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Features:
    - Add label in the gui to better explain when items are requested
  Changes:
    - Rework some aspect of LPN GUI MANAGER to reduce lag spike
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-07-12
  Bugfixes:
    - Corret a bug where script trying to close mod gui when it's not open[#4]
  Locale:
    - Change some description to be more explicit
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-07-08
  Features:
    - Add setting for let free minimum slot in space plaform in order to not stop them [#3]
  Changes:
    - Add migration support for newer version
  Bugfixes:
    - Bug where provider/requester not change channel in their internal settings [#1]
  Locale:
    - Change name in settings (misspelled)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-06-29
  Changes:
    - Mod's first release
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025-06-10
  Changes:
    - First initialisation of the mod
    - Add Provider, and Requester